[tool.poetry]
name = "simpleml"
version = "0.0.1"
description = "Very crude implementations of common machine learning algorithms"
authors = ["Kronostheus"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
nltk = "^3.8.1"
scipy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
